--- a/public/index.html
+++ b/public/index.html
@@ -108,8 +108,66 @@ adalah program pelatihan pemrograman yang<br>
       </section>
 
       <!-- ============================================-->
-      <!-- <section> begin ============================-->
+      <!-- <section> teknologi ============================-->
       <section class="pt-5 pt-md-9" id="service" style="background-color: #f1f1f1;">
+        <div class="container">
+          <div class="position-absolute z-index--1 end-0 d-none d-lg-block"><img src="assets/img/category/shape.svg" style="max-width: 200px" alt="service" /></div>
+          <div class="mb-7 text-center">
+            <!-- <h5 class="text-secondary">CATEGORY</h5> -->
+            <h3 class="fs-xl-10 fs-lg-8 fs-7 fw-bold font-cursive text-capitalize" style='font-family: "Poppins", "Rubik", "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";'>Materi apa saja yang dapat kamu pelajari ?</h3>
+            <p class="fs-2 mb-4 py-5 fw-medium text-center">
+              Kamu akan diberi akses kelebih dari 60 teknologi pemrograman dengan 2000 list materi, dan akan terus bertambah dengan upload materi baru
+            </p>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-lg-3 col-sm-6 mb-6">
+              <!-- <div class="card  shadow-hover rounded-3 text-center align-items-center">
+                <div class="card-body p-xxl-5 p-4">
+                  <img src="assets/img/category/icon1.png" width="75" alt="Service" />
+                  <h4 class="mb-3">Calculated Weather</h4>
+                  <p class="mb-0 fw-medium">Built Wicket longer admire do barton vanity itself do in it.</p>
+                  
+                </div>
+              </div> -->
+              <div class="card  shadow-lg p-3 mb-5 bg-body rounded">
+                <img src="assets/img/niomic/sistem-belajar.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Sistem Belajar</h5>
+                  <p class="card-text">Kami menghadirkan sistem belajar online yang menyenangkan dengan dibimbing mentor yang berpengalaman.</p>
+                  <a href="#" class="" style="text-decoration: none; font-weight: bold;">Lihat Selengkapnya</a>
+                </div>
+              </div>
+
+            </div>
+            <div class="col-lg-3 col-sm-6 mb-6">
+              <div class="card  shadow p-3 mb-5 bg-body rounded">
+                <img src="assets/img/niomic/c-silabus.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Syllabus</h5>
+                  <p class="card-text">Akses kelebih dari 60 teknologi pemrograman dengan 2000 list materi, dan akan terus bertambah dengan upload materi baru.</p>
+                  <a href="#" class="" style="text-decoration: none; font-weight: bold;">Lihat Selengkapnya</a>
+                </div>
+              </div>
+
+            </div>
+            <div class="col-lg-3 col-sm-6 mb-6">
+              <div class="card  shadow p-3 mb-5 bg-body rounded">
+                <img src="assets/img/niomic/c-keuntungan.png  " class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Keuntungan kamu</h5>
+                  <p class="card-text">Banyak keuntungan eksklusif yang akan kamu dapatkan ketika belajar di niomic, melalui bootcamp pemrograman intensif.</p>
+                  <a href="#" class="" style="text-decoration: none; font-weight: bold;">Lihat Selengkapnya</a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <!-- end of .container-->
+      </section>
+      <!-- <section> close ============================-->
+      <!-- <section> sistem belajar ============================-->
+      <section class="pt-5 pt-md-9" id="service" >
         <div class="container">
           <div class="position-absolute z-index--1 end-0 d-none d-lg-block"><img src="assets/img/category/shape.svg" style="max-width: 200px" alt="service" /></div>
           <div class="mb-7 text-center">
@@ -170,7 +228,7 @@ adalah program pelatihan pemrograman yang<br>
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
-      <section id="testimonial">
+      <section id="testimonial" style="background-color: #f1f1f1;">
         <div class="container">
           <div class="row justify-content-center align-items-center">
             <div class="col-lg-5">
