--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@ adalah program pelatihan pemrograman yang<br>
           </div>
         </div>
       </nav>
-      <section style="padding-top: 5.5rem">
+      <section style="padding-top: 6.5rem">
         <!-- <div class="bg-holder" style="background-image: url(assets/img/hero/hero-bg.svg)"></div> -->
         <!--/.bg-holder-->
 
@@ -119,60 +119,122 @@ adalah program pelatihan pemrograman yang<br>
               Kamu akan diberi akses kelebih dari 60 teknologi pemrograman dengan 2000 list materi, dan akan terus bertambah dengan upload materi baru
             </p>
           </div>
-          <div class="row justify-content-center">
-            <div class="col-lg-3 col-sm-6 mb-6">
-              <!-- <div class="card  shadow-hover rounded-3 text-center align-items-center">
-                <div class="card-body p-xxl-5 p-4">
-                  <img src="assets/img/category/icon1.png" width="75" alt="Service" />
-                  <h4 class="mb-3">Calculated Weather</h4>
-                  <p class="mb-0 fw-medium">Built Wicket longer admire do barton vanity itself do in it.</p>
-                  
-                </div>
-              </div> -->
-              <div class="card  shadow-lg p-3 mb-5 bg-body rounded">
-                <img src="assets/img/niomic/sistem-belajar.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Sistem Belajar</h5>
-                  <p class="card-text">Kami menghadirkan sistem belajar online yang menyenangkan dengan dibimbing mentor yang berpengalaman.</p>
-                  <a href="#" class="" style="text-decoration: none; font-weight: bold;">Lihat Selengkapnya</a>
-                </div>
+          <div class="row justify-content-center mb-5">
+            <div class="col">
+              <div class="card" style="width: 100%;">
+                <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv3/c_assets/c_s_angular-JS.jpg" class="card-img" alt="...">
+                <!-- <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div> -->
               </div>
-
             </div>
-            <div class="col-lg-3 col-sm-6 mb-6">
-              <div class="card  shadow p-3 mb-5 bg-body rounded">
-                <img src="assets/img/niomic/c-silabus.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Syllabus</h5>
-                  <p class="card-text">Akses kelebih dari 60 teknologi pemrograman dengan 2000 list materi, dan akan terus bertambah dengan upload materi baru.</p>
-                  <a href="#" class="" style="text-decoration: none; font-weight: bold;">Lihat Selengkapnya</a>
-                </div>
+            <div class="col">
+              <div class="card" style="width: 100%;">
+                <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/flutterr.png" class="card-img" alt="...">
+                <!-- <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div> -->
               </div>
-
             </div>
-            <div class="col-lg-3 col-sm-6 mb-6">
-              <div class="card  shadow p-3 mb-5 bg-body rounded">
-                <img src="assets/img/niomic/c-keuntungan.png  " class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Keuntungan kamu</h5>
-                  <p class="card-text">Banyak keuntungan eksklusif yang akan kamu dapatkan ketika belajar di niomic, melalui bootcamp pemrograman intensif.</p>
-                  <a href="#" class="" style="text-decoration: none; font-weight: bold;">Lihat Selengkapnya</a>
-                </div>
+            <div class="col">
+              <div class="card" style="width: 100%;">
+                <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/aws.png" class="card-img" alt="...">
+                <!-- <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div> -->
               </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 100%;">
+                <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv3/c_assets/c_python.png" class="card-img" alt="...">
+                <!-- <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div> -->
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 100%;">
+                <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/react.png" class="card-img" alt="...">
+                <!-- <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div> -->
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 100%;">
+                <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/react-native.png" class="card-img" alt="...">
+                <!-- <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div> -->
+              </div>
+            </div>
+          </div>
 
+          <div class="row justify-content-center ">
+            <div class="col">
+              <div class="card" style="width: 100%;">
+                <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv3/c_assets/c_ruby.png" class="card-img" alt="...">
+                <!-- <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div> -->
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 100%;">
+                <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/go.png" class="card-img" alt="...">
+                <!-- <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div> -->
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 100%;">
+                <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/node-js.png" class="card-img" alt="...">
+                <!-- <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div> -->
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 100%;">
+                <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/db.png" class="card-img" alt="...">
+                <!-- <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div> -->
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 100%;">
+                <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv3/c_assets/cdata_science.png" class="card-img" alt="...">
+                <!-- <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div> -->
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 100%;">
+                <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/js.png" class="card-img" alt="...">
+                <!-- <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div> -->
+              </div>
+            </div>
+            <div class="row text-center m-5">
+              <p class="fs-2 mb-4 py-5 fw-medium text-center">Tampilan lebih lengkap 60 teknologi yg tersedia? <a href="#" style="color:#F7922E; text-decoration: none;">Klik Disini</a></p>
             </div>
           </div>
         </div>
+
         <!-- end of .container-->
       </section>
       <!-- <section> close ============================-->
       <!-- <section> sistem belajar ============================-->
-      <section class="pt-5 pt-md-9" id="service" >
+      <section class="pt-5 pt-md-9" id="service" style='font-family: "Poppins", "Rubik", "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";'>
         <div class="container">
           <div class="position-absolute z-index--1 end-0 d-none d-lg-block"><img src="assets/img/category/shape.svg" style="max-width: 200px" alt="service" /></div>
           <div class="mb-7 text-center">
             <!-- <h5 class="text-secondary">CATEGORY</h5> -->
-            <h3 class="fs-xl-10 fs-lg-8 fs-7 fw-bold font-cursive text-capitalize" style='font-family: "Poppins", "Rubik", "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";'>Bootcamp Pemrograman Intensif</h3>
+            <h3 class="fs-xl-10 fs-lg-8 fs-7 fw-bold font-cursive text-capitalize">Bootcamp Pemrograman Intensif</h3>
             <p class="fs-2 mb-4 py-5 fw-medium text-center">
               Mulai dan tingkatkan karirmu sekarang menjadi programmer siap kerja yang skillful meski tanpa basic IT sekalipun. Mulai dari nol hingga expert dengan bimbingan mentor berpengalaman
             </p>
