--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@ adalah program pelatihan pemrograman yang<br>
             </p>
           </div>
           <div class="row justify-content-center mb-5">
-            <div class="col">
+            <div class="col-md-2 mt-4">
               <div class="card" style="width: 100%;">
                 <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv3/c_assets/c_s_angular-JS.jpg" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -128,7 +128,7 @@ adalah program pelatihan pemrograman yang<br>
                 </div> -->
               </div>
             </div>
-            <div class="col">
+            <div class="col-md-2 mt-4">
               <div class="card" style="width: 100%;">
                 <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/flutterr.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -136,7 +136,7 @@ adalah program pelatihan pemrograman yang<br>
                 </div> -->
               </div>
             </div>
-            <div class="col">
+            <div class="col-md-2 ">
               <div class="card" style="width: 100%;">
                 <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/aws.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -144,7 +144,7 @@ adalah program pelatihan pemrograman yang<br>
                 </div> -->
               </div>
             </div>
-            <div class="col">
+            <div class="col-md-2">
               <div class="card" style="width: 100%;">
                 <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv3/c_assets/c_python.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -152,7 +152,7 @@ adalah program pelatihan pemrograman yang<br>
                 </div> -->
               </div>
             </div>
-            <div class="col">
+            <div class="col-md-2">
               <div class="card" style="width: 100%;">
                 <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/react.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -160,7 +160,7 @@ adalah program pelatihan pemrograman yang<br>
                 </div> -->
               </div>
             </div>
-            <div class="col">
+            <div class="col-md-2">
               <div class="card" style="width: 100%;">
                 <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/react-native.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -171,7 +171,7 @@ adalah program pelatihan pemrograman yang<br>
           </div>
 
           <div class="row justify-content-center ">
-            <div class="col">
+            <div class="col-md-2">
               <div class="card" style="width: 100%;">
                 <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv3/c_assets/c_ruby.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -179,7 +179,7 @@ adalah program pelatihan pemrograman yang<br>
                 </div> -->
               </div>
             </div>
-            <div class="col">
+            <div class="col-md-2">
               <div class="card" style="width: 100%;">
                 <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/go.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -187,7 +187,7 @@ adalah program pelatihan pemrograman yang<br>
                 </div> -->
               </div>
             </div>
-            <div class="col">
+            <div class="col-md-2">
               <div class="card" style="width: 100%;">
                 <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/node-js.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -195,7 +195,7 @@ adalah program pelatihan pemrograman yang<br>
                 </div> -->
               </div>
             </div>
-            <div class="col">
+            <div class="col-md-2">
               <div class="card" style="width: 100%;">
                 <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/db.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -203,7 +203,7 @@ adalah program pelatihan pemrograman yang<br>
                 </div> -->
               </div>
             </div>
-            <div class="col">
+            <div class="col-md-2">
               <div class="card" style="width: 100%;">
                 <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv3/c_assets/cdata_science.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -211,7 +211,7 @@ adalah program pelatihan pemrograman yang<br>
                 </div> -->
               </div>
             </div>
-            <div class="col">
+            <div class="col-md-2">
               <div class="card" style="width: 100%;">
                 <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/js.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
