--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@
                 </div> -->
               </div>
             </div>
-            <div class="col-md-2 ">
+            <div class="col-md-2 mt-4">
               <div class="card" style="width: 100%;">
                 <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/aws.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -164,7 +164,7 @@
                 </div> -->
               </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 mt-4">
               <div class="card" style="width: 100%;">
                 <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv3/c_assets/c_python.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -172,7 +172,7 @@
                 </div> -->
               </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 mt-4">
               <div class="card" style="width: 100%;">
                 <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/react.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -180,7 +180,7 @@
                 </div> -->
               </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 mt-4">
               <div class="card" style="width: 100%;">
                 <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/react-native.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -191,7 +191,7 @@
           </div>
 
           <div class="row justify-content-center ">
-            <div class="col-md-2">
+            <div class="col-md-2 mt-4">
               <div class="card" style="width: 100%;">
                 <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv3/c_assets/c_ruby.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -199,7 +199,7 @@
                 </div> -->
               </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 mt-4">
               <div class="card" style="width: 100%;">
                 <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/go.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -207,7 +207,7 @@
                 </div> -->
               </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 mt-4">
               <div class="card" style="width: 100%;">
                 <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/node-js.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -215,7 +215,7 @@
                 </div> -->
               </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 mt-4">
               <div class="card" style="width: 100%;">
                 <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/db.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -223,7 +223,7 @@
                 </div> -->
               </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 mt-4">
               <div class="card" style="width: 100%;">
                 <img src="https://asset-niomic.s3-ap-southeast-1.amazonaws.com/niomicv3/c_assets/cdata_science.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
@@ -231,7 +231,7 @@
                 </div> -->
               </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 mt-4">
               <div class="card" style="width: 100%;">
                 <img src="https://s3-ap-southeast-1.amazonaws.com/niomic/img-v1/c_materi/js.png" class="card-img" alt="...">
                 <!-- <div class="card-body">
