--- a/public/index.html
+++ b/public/index.html
@@ -428,16 +428,13 @@
       <!-- ============================================-->
       <!-- <section> begin ============================-->
       <section class="pb-0 pb-lg-4">
-        <div class="container">
+        <div class="container text-justify">
           <div class="row">
             <div class="col-lg-3 col-md-7 col-12 mb-4 mb-md-6 mb-lg-0 order-0">
               <img class="mb-4" src="assets/img/logo-niomic-black-.png" width="150" alt="jadoo" />
-              <p class="fs--2 text-secondary mb-0 fw-medium">
-                NIOMIC - PT CERDASKAN GENERASI BANGSA<br class="d-none d-xl-block" /><br class="d-none d-xl-block" />
-                Centennial Tower Level 29, Jl. Jendral Gatot Subroto Kav. 24-25 Unit D-E, RT. 2 / RW. 2, Karet Semanggi, Setiabudi, Jakarta Selatan, DKI Jakarta, Indonesia 12950
-              </p>
+              <<p class="fs--1 fw-medium" href="#!">Payment Partner : <br> BRI, BCA, Mandiri, BNI, Permata, Indomaret, Alfamart, Alfamidi, DanDan, Akulaku, Credit Card, OVO, Dana, ShopeePay, Gopay, Linkaja & Tokopedia</p>
             </div>
-            <div class="col-lg-2 col-md-4 mb-4 mb-lg-0 order-lg-1 order-md-2">
+            <div class="col-lg-3 col-md-4 mb-4 mb-lg-0 order-lg-1 order-md-2">
               <h4 class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">Official Office</h4>
               <ul class="list-unstyled mb-0">
                 <li class="mb-2">
@@ -448,7 +445,7 @@
                 </li>
               </ul>
             </div>
-            <div class="col-lg-2 col-md-4 mb-4 mb-lg-0 order-lg-2 order-md-3">
+            <div class="col-lg-1 col-md-4 mb-4 mb-lg-0 order-lg-2 order-md-3">
               <h4 class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">Pages</h4>
               <ul class="list-unstyled mb-0">
                 <li class="mb-2"><a class="link-900 fs--1 fw-medium text-decoration-none" href="#!">Career</a></li>
@@ -466,7 +463,7 @@
                     Telp : 0725-7648158<br class="d-none d-xl-block" />
                   </p>
                 </li>
-                <li class="mb-2"><p class="fs--1 fw-medium" href="#!">Payment Partner : BRI, BCA, Mandiri, BNI, Permata, Indomaret, Alfamart, Alfamidi, DanDan, Akulaku, Credit Card, OVO, Dana, ShopeePay, Gopay, Linkaja & Tokopedia</p></li>
+                <li class="mb-2"></li>
               </ul>
             </div>
             <div class="col-lg-3 col-md-5 col-12 mb-4 mb-md-6 mb-lg-0 order-lg-4 order-md-1">
