--- a/public/s-belajar.html
+++ b/public/s-belajar.html
@@ -38,21 +38,7 @@
           </button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base align-items-lg-center align-items-start">
-              <li class="nav-item dropdown px-3 px-lg-0">
-                <a class="d-inline-block ps-0 py-3 pe-2 text-decoration-none dropdown-toggle fw-medium" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Produk Kami</a>
-                <ul class="dropdown-menu dropdown-menu-end border-0 shadow-lg" style="border-radius: 0.3rem" aria-labelledby="navbarDropdown">
-                  <li>
-                    <a class="dropdown-item" href="#!">
-                      <h3><span style="font-weight: bold; color: #f7922e">Pemograman</span> Intensif</h3>
-                      adalah program pelatihan pemrograman yang<br />
-                      dilakukan secara online & intensif untuk<br />
-                      menghasilkan skill siap kerja bahkan untuk<br />
-                      orang awam sekalipun
-                    </a>
-                  </li>
-                  <!-- <li><a class="dropdown-item" href="#!">BN</a></li> -->
-                </ul>
-              </li>
+             
               <li class="nav-item px-3 px-xl-4"><a class="nav-link fw-medium" aria-current="page" href="#!">Login</a></li>
               <!-- <li class="nav-item px-3 px-xl-4"><a class="btn order-1 order-lg-0 fw-medium" style="color: #F7922E" href="#!">Sign Up</a></li> -->
               <!-- <li class="nav-item px-3 px-xl-4"><button type="button" class="btn btn-default" style="color: #F7922E">Primary</button></li> -->
@@ -64,7 +50,7 @@
 
       <!-- <section> close ============================-->
       <!-- <section> sistem belajar ============================-->
-      <section class="pt-lg-10 pt-md-9" id="service">
+      <section class="pt-lg-10 pt-md-9" id="service" style="background-color: #f1f1f1">
         <div class="container">
           <div class="position-absolute z-index--1 end-0 d-none d-lg-block"><img src="assets/img/category/shape.svg" style="max-width: 200px" alt="service" /></div>
           <div class="mb-7 text-center">
