--- a/public/index.html
+++ b/public/index.html
@@ -359,7 +359,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Syllabus</h5>
                   <p class="card-text">Akses kelebih dari 60 teknologi pemrograman dengan 2000 list materi, dan akan terus bertambah dengan upload materi baru.</p>
-                  <a href="#" class="" style="text-decoration: none; font-weight: bold">Lihat Selengkapnya</a>
+                  <a href="silabus.html" class="" style="text-decoration: none; font-weight: bold">Lihat Selengkapnya</a>
                 </div>
               </div>
             </div>
