--- a/public/index.html
+++ b/public/index.html
@@ -369,7 +369,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Keuntungan kamu</h5>
                   <p class="card-text">Banyak keuntungan eksklusif yang akan kamu dapatkan ketika belajar di niomic, melalui bootcamp pemrograman intensif.</p>
-                  <a href="#" class="" style="text-decoration: none; font-weight: bold">Lihat Selengkapnya</a>
+                  <a href="keuntungan.html" class="" style="text-decoration: none; font-weight: bold">Lihat Selengkapnya</a>
                 </div>
               </div>
             </div>
