--- a/public/index.html
+++ b/public/index.html
@@ -424,7 +424,7 @@
               <h4 class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">Official Office</h4>
               <ul class="list-unstyled mb-0">
                 <li class="mb-2">
-                  <p class="link-900 fs--1 fw-medium text-decoration-none" href="#!">
+                  <p class="fs--1 fw-medium text-decoration-none">
                     NIOMIC - PT CERDASKAN GENERASI BANGSA<br class="d-none d-xl-block" /><br class="d-none d-xl-block" />
                     Centennial Tower Level 29, Jl. Jendral Gatot Subroto Kav. 24-25 Unit D-E, RT. 2 / RW. 2, Karet Semanggi, Setiabudi, Jakarta Selatan, DKI Jakarta, Indonesia 12950
                   </p>
