--- a/public/s-belajar.html
+++ b/public/s-belajar.html
@@ -55,12 +55,16 @@
           <div class="position-absolute z-index--1 end-0 d-none d-lg-block"><img src="assets/img/category/shape.svg" style="max-width: 200px" alt="service" /></div>
           <div class="mb-7 text-center">
             <!-- <h5 class="text-secondary">CATEGORY</h5> -->
-            <h2
-              class="fs-xl-5 fs-lg-8 fs-10 fw-medium font-cursive text-capitalize"
+            <h1
+              class="fs-xl-7 fs-lg-10 fs-12 fw-bold font-cursive text-capitalize"
               style="font-family: 'Poppins', 'Rubik', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'"
             >
+            
               Sistem Belajar
-            </h2>
+            </h1>
+            <p class="fs-2 mb-4 py-5 fw-medium text-center">
+              Kami menghadirkan sistem belajar online yang menyenangkan dengan dibimbing mentor yang berpengalaman.
+            </p>
             </div>
           <div class="row justify-content-center">
             <div class="col-xl-10 col-lg-11">
