teknologi-selengkapnya--keuntungan

--- a/public/silabus.html
+++ b/public/silabus.html
@@ -62,6 +62,9 @@
             >
             Syllabus
             </h1>
+            <p class="fs-2 mb-4 py-5 fw-medium text-center">
+              Akses kelebih dari 60 teknologi pemrograman dengan 2000 list materi, dan akan terus bertambah dengan upload materi baru.
+            </p>
             </div>
           <div class="row justify-content-center align-items-center ">
               
