--- a/public/modal.html
+++ b/public/modal.html
@@ -81,7 +81,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center mb-5">
+          <div class="row justify-content-center ">
             <div
               class="col-md-2 mt-4 detailTeknologi"
               type="button"
