--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center mb-5">
+          <div class="row justify-content-center ">
             <div
               class="col-md-2 mt-4 detailTeknologi"
               type="button"
@@ -370,7 +370,7 @@
                   Testimonials
                 </h1>
                 <p class="fs-2 mb-4 fw-medium">
-                  Lulusan kami telah bekerja di lebih dari 100<br class="d-none d-xl-block" />perusahaan di seluruh Indonesia. Ini cerita sukses<br class="d-none d-xl-block" />dan pengalaman mereka yang sudah belajar di NIOMIC.
+                  Lulusan kami telah bekerja di lebih dari 100 perusahaan di seluruh Indonesia. Ini cerita sukses<br class="d-none d-xl-block" />dan pengalaman mereka yang sudah belajar di NIOMIC.
                 </p>
                 <a class="btn btn-primary btn-lg me-md-4 mb-3 mb-md-0 border-0 primary-btn-shadow" href="#!" role="button" style="background-color: #f7922e; color: white">Lihat Testimoni</a>
                 
